--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; url=/digivito-jgm/index.html" />
+    <meta http-equiv="refresh" content="0; url=/" />
 </head>
 
 <body>
