UI: Changes for SEO keywords

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Static website for J.G.Miller Lawfirm" />
+  <meta name="author" content="J.G.Miller" />
+  <meta name="description" content="J.G.Miller Lawfirm" />
+  <meta name="keywords" content="Estate Planning Attorney, Business Lawyer, Business Attorney, Estate Planning, Trust Attorney, Wills and Trusts, Forming a Business, Start a Business in Utah, Start a Business in Arizona, Power of Attorney, Living Will" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
